<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.WelcomeFragment">

    <TextView
        style="@style/TextHeadlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/welcome_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/welcome_description" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_navigate_instructions" />

</androidx.appcompat.widget.LinearLayoutCompat>